# semantic-segmentation-pytorch

./: .gitignore  README.md  app.py  create_dataset.py  download_dataset.py  eval.py  predict.py  pyproject.toml  train.py
config/: create_dataset.yaml  main.yaml  predict.yaml
utils/: data.py  metrics.py  model.py
